# cpi-example

./: .eslintrc.json  .gitignore  .gitmodules  .prettierignore  Anchor.toml  Cargo.toml  README.md  package.json
programs/drift-client/: Cargo.toml
programs/drift-client/src/: context.rs  error.rs  lib.rs  state.rs
tests/: drift-client.ts  testHelpers.ts
ts/: addresses.ts  driftClient.ts
