[package]
name = "drift-client"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift_client"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
bytemuck = { version = "1.4.0" }
clearing-house = { path = "../../deps/protocol-v1/programs/clearing_house", features = ["cpi"] }
borsh = "0.9.1"